<resources>
    <string name="app_name">GetMyDriverCard</string>
    <string name="title_activity_welcome">WelcomeActivity</string>
    <string name="title_activity_first_application">FirstApplicationActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_picture">PictureActivity</string>
    <string name="title_activity_old_card_info">OldCardInfoActivity</string>
    <string name="title_activity_name_replacement">NameReplacementActivity</string>
    <string name="title_activity_bgto_eu">BGtoEUActivity</string>
    <string name="title_activity_address_replacement">AddressReplacementActivity</string>
    <string name="title_activity_picture_replacement">PictureReplacementActivity</string>
    <string name="title_activity_renewal">RenewalActivity</string>
    <string name="title_activity_status_check">StatusCheckActivity</string>
    <string name="title_activity_log_in">LogInActivity</string>
    <string name="title_activity_contacts">ContactsActivity</string>
    <string name="GetMyDriverCardAppication">GetMyDriverCardApplication</string>
    <string name="title_activity_application_choose">ApplicationChooseActivity</string>
    <string name="title_activity_applications_list">ApplicationsListActivity</string>
    <string name="title_activity_details">DetailsActivity</string>
    <string name="select_application_type_prompt">Select your application from type</string>
    <string name="application_type_first">First card with local driving license</string>
    <string name="application_type_EU_for_BG">Exchanging EU for BG card</string>
    <string name="application_type_loss">Replacement of lost card</string>
    <string name="application_type_theft">Replacement of stolen card</string>
    <string name="application_type_damaged">Replacement of damaged card</string>
    <string name="application_type_malfunction">Replacement of malfunctioning card</string>
    <string name="application_type_name">Replacement due to name change</string>
    <string name="application_type_address">Replacement due to address change</string>
    <string name="application_type_selfie">Replacement due to photograph change</string>
    <string name="application_type_expired">Replacement due to expiration</string>
    <string name="application_type_suspended">Replacement due to suspension/withdrawal</string>
    <string name="submit_text">Apply</string>
    <string name="welcome">Welcome! \n Please, select one of the options below.</string>
    <string name="button_start_new_application">Start a new card application</string>
    <string name="button_check_status">Check application status</string>
    <string name="button_log_in_to_admin_panel">Admin Panel</string>
    <string name="title_activity_card_application_list">CardApplicationListActivity</string>
    <string name="application_list">Application id</string>
    <string name="text_status_check_instructions">Please, fill in your personal status number below and click the SUBMIT button to see your application status. You can find your personal status number in the email you received from us when you submitted your application.</string>
    <string name="edit_text_status_code_hint">Your Status Code Here</string>
    <string name="wrong_status_number">Wrong application number! Please, check that you write the correct personal status number</string>
    <string name="application">Application id</string>
    <string name="personal_number_egn">Personal Number</string>
    <string name="first_name">First Name(s)</string>
    <string name="last_name">Last Name(s)</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="address">Address</string>
    <string name="phone_number">Phone Number</string>
    <string name="date_of_event">Date of Event</string>
    <string name="place_of_event">Place of Event</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="wrong_username_or_password">Wrong username or password!</string>
    <string name="old_card_number">Old card number</string>
    <string name="old_card_country">Old card country</string>
    <string name="push_button_to_make_picture">Click button to take a picture!</string>
    <string name="new_first_name">New first name</string>
    <string name="new_last_name">New last name</string>
    <string name="old_card_authority">Old card authority</string>
    <string name="open_camera">Open Camera</string>
    <string name="new_address">New address</string>
    <string name="choose_office">Office to receive</string>
    <string name="i_declare">I declare that the details in this form are correct and understand that it is a criminal offence
    if I make a false declaration to get a digital tachograph driver card and can lead to a fine of up to 5000 British pounds,
    and/or a maximum of two years imprisonment.</string>
    <string name="clear_signature_pad">Clear signature pad</string>
    <string name="agreement">Check if you have read and agreed to this declaration.</string>
    <string name="submit_application">Submit application</string>
    <string name="old_card_date_of_expiry">Old card date of expiry</string>
    <string name="email">Email</string>
    <string name="application_successful">Your application has now been processed successfully! Please check your email for further instructions.</string>
    <string name="search_driver_personal_number">by driver Personal number</string>
    <string name="search_form_by_driver_name">by driver name</string>
    <string name="search_form_by_submission_date">by submission date</string>
    <string name="search_form_by_status">by status</string>
    <string name="search_application_forms">Search application forms   </string>
    <string name="clear_search">Clear search</string>
    <string name="applications_list">Applications list</string>
    <string name="set_status">set status</string>
    <string name="change_for_status">Change status</string>
    <string name="date_of_submission">Date of submission</string>
    <string name="formid">FormID:   </string>
    <string name="submission_date">Submission Date:   </string>
    <string name="status">Status:   </string>
    <string name="type">Type:</string>
    <string name="driver_personal_information">Driver personal information</string>
    <string name="firstname">First name (s):   </string>
    <string name="lastname">Last name (s)   :</string>
    <string name="office_to_receive">Office to receive:   </string>
    <string name="driver_picture">Driver picture:   </string>
    <string name="picture">Picture</string>
    <string name="driving_license">Driving license</string>
    <string name="driving_license_number">Driving license number:   </string>
    <string name="dr_l_number">driving license number</string>
    <string name="driving_license_country_2">Driving license country:   </string>
    <string name="driving_license_country">Driving license country:   </string>
    <string name="lost_theft_information">Lost / Theft information</string>
    <string name="place_of_event_detail">Place of event:   </string>
    <string name="date_of_event_details">Date of event:   </string>
    <string name="old_card_date">Old card date of expiry:   </string>
    <string name="old_card_information">Old card information</string>
    <string name="card_number">Card number:   </string>
    <string name="renewing_information">Renewing information</string>
    <string name="new_first_name_details">New First name:   </string>
    <string name="old_card_picture">Old card picture</string>
    <string name="details">Details:   </string>
    <string name="renewal_reason">Renewal reason:   </string>
    <string name="status_check_code">Status check code:   </string>
    <string name="signature">Signature:   </string>
    <string name="authority">Authority:   </string>
    <string name="new_last_name_details">New Last name:   </string>
    <string name="date_format">yyyy-MM-dd</string>
    <string name="dots">...</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="title_activity_maps">Map</string>
    <string name="pic_recomentdations">Recommendations: take photo against a plain light background, looking straight at the camera, have a neutral expression, your eyes open, your face uncovered, and no smiling, no reflection or glare, no sunglasses, no hair hiding your eyes, no head covering e.g. hat/cap (unless for religious or medical reasons), no shadows.</string>
    <string name="submit_button_status">Submit</string>


</resources>
