<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.admin.login.LogInFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <EditText
            android:id="@+id/et_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/username"/>

        <EditText
            android:id="@+id/et_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/password"/>

        <Button
            android:id="@+id/button_log_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/log_in"/>

        <TextView
            android:id="@+id/tv_wrong_user_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/wrong_username_or_password"
            android:textColor="@color/md_red_50"
            android:visibility="gone"/>

        <ProgressBar
            android:id="@+id/pb_loading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone" />

    </LinearLayout>

</FrameLayout>