<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.Toolbar
            android:id="@+id/drawer_toolbar"
            android:layout_width="match_parent"
            android:layout_height="40dp" />

        <TextView
            android:id="@+id/tv_welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_below="@+id/drawer_toolbar"/>

        <Button
            android:id="@+id/button_new_application_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_start_new_application"
            android:layout_below="@+id/tv_welcome"/>

        <Button
            android:id="@+id/button_check_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_check_status"
            android:layout_below="@+id/button_new_application_start"/>

        <Button
            android:id="@+id/button_admin_panel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_log_in_to_admin_panel"
            android:layout_below="@+id/button_check_status"/>

    </RelativeLayout>




</android.support.constraint.ConstraintLayout>