<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

      <LinearLayout
        android:id="@+id/layout_oldcard_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_oldcard_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/old_card_number" />

        <EditText
            android:id="@+id/et_oldcard_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/old_card_number"
            android:inputType="number" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/layout_oldcard_country"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout_oldcard_number"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_oldcard_country"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/old_card_country" />

        <EditText
            android:id="@+id/et_oldcard_country"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/old_card_country"
            android:inputType="text" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_oldcard_piccamera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/layout_oldcard_country"
        android:text="@string/open_camera" />

    <ImageView
        android:id="@+id/iv_oldcard_picture"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_below="@+id/btn_oldcard_piccamera"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/push_button_to_make_picture" />

</RelativeLayout>