<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/layout_personal_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_personal_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/personal_number_egn" />

        <EditText
            android:id="@+id/et_personal_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/personal_number_egn"
            android:inputType="number" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/layout_first_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout_personal_number"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_first_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/first_name" />

        <EditText
            android:id="@+id/et_first_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/first_name"
            android:inputType="textPersonName" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/layout_last_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout_first_name"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_last_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/last_name" />

        <EditText
            android:id="@+id/et_last_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/last_name"
            android:inputType="textPersonName" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/layout_date_of_birth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout_last_name"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_date_of_birth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date_of_birth" />

        <EditText
            android:id="@+id/et_date_of_birth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/date_of_birth"
            android:inputType="date" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/layout_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout_date_of_birth"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/address" />

        <EditText
            android:id="@+id/et_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/address"
            android:inputType="textPostalAddress" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/layout_phone_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout_address"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_phone_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone_number" />

        <EditText
            android:id="@+id/et_phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone_number"
            android:inputType="phone" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout_phone_number"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email" />

        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />
    </LinearLayout>

</RelativeLayout>