<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Declaration and Signing"
                android:layout_centerHorizontal="true"
                android:textColor="@color/md_red_800"
                android:textSize="20dp"
                android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <TextView
        android:id="@+id/tv_declaration_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="11dp"
        android:text="@string/i_declare"
        android:textSize="10sp"
        android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_agreament"
            android:layout_width="wrap_content"
            android:layout_height="23dp"
            android:layout_marginTop="8dp"
            android:text="@string/agreement"
            android:textSize="10sp"
            android:textStyle="italic" />

        <CheckBox
            android:id="@+id/chb_declaration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="visible" />

    </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
    <Button
        android:id="@+id/btn_clear_pad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clear_signature_pad"
        android:textStyle="italic" />

    <com.github.gcacace.signaturepad.views.SignaturePad
        android:id="@+id/sp_signature_pad"
        android:layout_width="match_parent"
        android:layout_height="190dp"
        android:background="@android:color/white" />

    <Button
        android:id="@+id/btn_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit_application" />

       </LinearLayout>

        </LinearLayout>
    </ScrollView>

</RelativeLayout>