<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Driving License Photo"
        android:layout_centerHorizontal="true"
        android:textColor="@color/md_red_800"
        android:textSize="20dp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <Button
        android:id="@+id/btn_licensepiccamera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/open_camera" />

    <ImageView
        android:id="@+id/iv_licensepicview"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_below="@+id/btn_licensepiccamera"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/push_button_to_make_picture"
        />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pic_recomentdations"
            android:textSize="15dp"
            android:textStyle="italic"
            android:visibility="gone"
            />

    </LinearLayout>

    </LinearLayout>
    </ScrollView>

    </RelativeLayout>