<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroung2"
    tools:context=".views.statuscheck.StatusCheckFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_application_choice_prompt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Status Check"
            android:layout_centerHorizontal="true"
            android:textColor="@color/md_red_800"
            android:textSize="20dp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/tv_status_check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_status_check_instructions" />

        <EditText
            android:id="@+id/et_write_status_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_text_status_code_hint"
            android:inputType="text"
            />

        <Button
            android:id="@+id/button_check_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit_text" />

        <TextView
            android:id="@+id/tv_show_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone" />

        <ProgressBar
            android:id="@+id/pb_loading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone" />
    </LinearLayout>
</FrameLayout>